# dv_doj

./: .env.example  .gitignore  2025_11_01_cursor_recover_lost_chat_after_saving_w.md  ANALYSIS_SUMMARY.md  CHANGELOG.md  DV_HEADER_FIXES_SUMMARY.md  HOW_TO_USE_EXPORT_SCRIPT.md  Makefile  NEXT_STEPS.md  PROJECT_SUMMARY.md  README.md  README_FINAL.md  SETUP_GIT.md  ai_data_analyzer.py  check_dv_columns.py  etl.py  git_automation.py  map_dv_to_rms_locations.py  pyproject.toml  requirements.txt  summary_report.json  transform_dv_data.py  ucr-dv1_2019b.docx  verify_transformations.py
.github/workflows/: ci.yml
analysis/ai_responses/: _2023_2025_10_31_dv_analysis_20251031_225735.json  _2023_2025_10_31_dv_cad_analysis_20251031_225753.json  _2023_2025_10_31_dv_cad_prompts_20251031_225753.json  _2023_2025_10_31_dv_prompts_20251031_225735.json  _2023_2025_10_31_dv_rms_analysis_20251031_225801.json  _2023_2025_10_31_dv_rms_prompts_20251031_225801.json
data/raw/: 23_25_10_01_dv_state.xlsx  23_25_10_01_rms_dv.xlsx
docs/: 2025_11_11_cursor_stage_commit_and_push_to_github.md  data_dictionary.md  demographic_insights_notes.md  handoff_next_steps.md  pii_policy.md
docs/archive/: QUICKSTART.md  START_HERE.md  (+4 more)
etl_scripts/: __init__.py  ai_data_analyzer.py  backfill_dv.py  base_etl.py  check_dv_columns.py  examine_dv_structure.py  export_excel_sheets_to_csv.py  fix_dv_headers.py  map_dv_to_rms_locations.py  quick_analysis.py  transform_dv_data.py  verify_transformations.py
tests/: test_backfill_functions_edge_cases.py  test_headers.py  test_mapping.py  test_time_logic.py
(+9 files in other folders)
