[build-system]
requires = ["setuptools>=68", "wheel"]

[project]
name = "dv_doj"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "pandas==2.2.3",
  "openpyxl==3.1.5",
  "python-dateutil==2.9.0.post0",
  "typer==0.12.5",
  "rich==13.9.4",
  "psutil==5.9.8",
  "tqdm==4.66.5"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["etl_scripts*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E","F","I","UP"]
ignore = ["E501","E712","E722","F401","F541","F841","E402","I001","UP006","UP008","UP035","UP045"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true

